Solaris builds fails after JDK-8170663

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: tools
    • None
    • b150
    • solaris
    • Not verified

      "/opt/jprt/jprtadm/erik/jdk9-dev/jdk/src/java.base/unix/native/libjli/java_md_solinux.c", line 519: error: declaration can not follow a statement (E_DECLARATION_IN_CODE)

            Assignee:
            Erik Joelsson
            Reporter:
            Erik Joelsson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: