8171245: Solaris builds fails after JDK-8170663

Reviewed-by: naoto